fixed a little layout issue.

--- a/style.css
+++ b/style.css
@@ -870,7 +870,7 @@ body {
   column-gap: 33.8px;
   box-sizing: content-box;
   /*! padding-right: 158px; */
-  /*! padding-left: 40px; */
+  padding-left: 0px;
   --padding-vertical: 0px;
   padding-top: 22px;
   padding-bottom: var(--padding-vertical);
